--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "elan-nvision",
   "version": "0.1.0",
   "private": true,
+  "homepage":"https://elan.org.in",
   "dependencies": {
     "@emailjs/browser": "^3.4.0",
     "@fortawesome/fontawesome-svg-core": "^1.3.0",
@@ -14,6 +15,7 @@
     "@testing-library/user-event": "^13.5.0",
     "aos": "^2.3.4",
     "emailjs": "^3.7.0",
+    "gh-pages": "^3.2.3",
     "gsap": "^3.9.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -24,6 +26,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
