--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "gsap": "^3.9.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-ga": "^3.3.0",
     "react-helmet": "^6.1.0",
     "react-lazy-load-image-component": "^1.5.1",
     "react-router-dom": "^6.2.1",
